# tether

./: .gitignore  ERR_21798124.txt  JOB_21798124.txt  LICENSE.md  Makefile  README.md  analyze.py  cli_args.py  generate.py  generate.sh  grade_all.sh  pyproject.toml  run.py  run_all.sh  test.py
examples/blank_test_examples/: MediatedCausalitySmoking_bootstrap_0.npz  MediatedCausalityWithMethod_bootstrap_0.npz  MediatedCausalityWithMethod_tdist_0.npz  MediatedCausality_bootstrap_0.npz  MediatedCausality_tdist_0.npz  SimpleInequality_bootstrap_0.npz  SimpleInequality_tdist_0.npz
scripts/: grade_all.sh  npz_to_wordcloud.py  plot.py  reproducibility_ComplexInequality_tdist.py  reproducibility_SimpleInequality_tdist.py  reproducibility_stats.py  run_all.sh
source/: .proctor.py.swp  __init__.py  analyses.py  analyzer.py  benchmark.py  generator.py  grader.py  proctor.py  readSavedBenchmarkNpz.py  recorder.py  sort_by_answer.py  sorter.py  uncertainty_quantification.py  utils.py
source/benchmarks/: .complex_inequality.py.swo  .complex_inequality.py.swp  complex_inequality.py  equation_labels.txt  equations.py  mediatedCausality.py  mediated_causality.py  readSavedBenchmarkTxt.py  significantFigures.py  significant_figures.py  simpleInequality.py  simple_inequality.py  (+2 more)
tests/: __init__.py  test_analyzer.py  test_complex_inequality.py  test_generate.py  test_mediated_causality_fast.py  test_mediated_causality_slow.py  test_module1.py  test_openai_api.py  test_proctor.py  test_run.py  test_simple_inequality.py  test_standard_deviation.py  test_utils.py
tether/: __init__.py
(+53 files in other folders)
