[project]
name = "tether"
dynamic = ["version"]
dependencies = [
    "setuptools_scm==8.0.4"
]
requires-python = "~=3.10"

[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tether"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "pylint==3.0.3",
    "pynvim==0.5.0",
]
test = [
    "pytest==7.4.3",
]
